# VectrixEngine

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  DoxygenLayout.xml  LICENSE.txt  Profile-Startup.json  README.md  build_docs.bat  build_docs.sh  v.vert.spv  vert.spv
.github/workflows/: cmake-multi-platform.yml
Sandbox/src/: CameraWidget.cpp  CameraWidget.h  Sandbox.cpp
Sandbox/src/Layers/: ExampleLayer.h
Vectrix/src/: Vectrix.h  vcpch.h
Vectrix/src/GraphicAPI/Vulkan/: Enum_str.h  VmaAllocator.cpp  VulkanContext.cpp  VulkanContext.h  VulkanRendererAPI.cpp  VulkanRendererAPI.h
Vectrix/src/GraphicAPI/Vulkan/ImGui/: VulkanDebugWidget.cpp  VulkanDebugWidget.h  VulkanImGuiManager.cpp  VulkanImGuiManager.h
Vectrix/src/GraphicAPI/Vulkan/Rendering/: Device.cpp  Device.h  Pipeline.cpp  Pipeline.h  SSBO.cpp  SSBO.h  SwapChain.cpp  SwapChain.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanFramebuffer.cpp  VulkanFramebuffer.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanTexture.cpp  VulkanTexture.h  VulkanVertexArray.cpp  VulkanVertexArray.h
Vectrix/src/GraphicAPI/Vulkan/rendering/: Device.cpp  Device.h  Pipeline.cpp  Pipeline.h  PipelineManager.cpp  PipelineManager.h  SSBO.cpp  SSBO.h  SwapChain.cpp  SwapChain.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanShader.cpp  VulkanShader.h  VulkanVertexArray.cpp  VulkanVertexArray.h
Vectrix/src/Platform/Linux/: LinInput.cpp  LinInput.h  LinWindow.cpp  LinWindow.h
Vectrix/src/Platform/Windows/: WinInput.cpp  WinInput.h  WinWindow.cpp  WinWindow.h
Vectrix/src/Vectrix/: Application.cpp  Application.h  EntryPoint.h  Log.cpp  Log.h  Window.h
Vectrix/src/Vectrix/Core/: AppInfo.cpp  AppInfo.h  Core.h  DeltaTime.h  Log.cpp  Log.h  Window.cpp  Window.h  version.h
Vectrix/src/Vectrix/Debug/: Profiler.cpp  Profiler.h
Vectrix/src/Vectrix/Events/: Event.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
Vectrix/src/Vectrix/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h  ImGuiManager.cpp  ImGuiManager.h  ImGuiWidget.cpp  ImGuiWidget.h
Vectrix/src/Vectrix/Input/: Input.h  KeyCodes.h  MouseCodes.h
Vectrix/src/Vectrix/Layers/: Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
Vectrix/src/Vectrix/Renderer/: Buffer.cpp  Buffer.h  CameraPush.cpp  CameraPush.h  GraphicsContext.cpp  GraphicsContext.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  RendererAPI.h  Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h  Vertex.h  VertexArray.cpp
Vectrix/src/Vectrix/Renderer/Camera/: CameraPush.cpp  CameraPush.h  PerspectiveCamera.cpp  PerspectiveCamera.h
Vectrix/src/Vectrix/Renderer/Models/: Model.cpp  Model.h  ObjLoader.h  VertexArray.cpp  VertexArray.h
Vectrix/src/Vectrix/Renderer/Shaders/: Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h  ShaderType.h  ShaderUniform.h  ShaderUniformLayout.h  UniformTrait.h
Vectrix/src/Vectrix/Rendering/: Buffer.cpp  Buffer.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.cpp  GraphicsContext.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h
Vectrix/src/Vectrix/Rendering/Camera/: PerspectiveCamera.cpp  PerspectiveCamera.h  PerspectiveCameraController.cpp  PerspectiveCameraController.h
Vectrix/src/Vectrix/Rendering/Mesh/: MeshHandle.h  MeshManager.cpp  MeshManager.h  Model.cpp  Model.h  ObjLoader.h  Transform.cpp  Transform.h  Vertex.h  VertexArray.cpp  VertexArray.h
Vectrix/src/Vectrix/Rendering/Models/: Model.cpp  ObjLoader.h  Transform.cpp  Transform.h  Vertex.h  VertexArray.cpp  VertexArray.h
Vectrix/src/Vectrix/Rendering/Shaders/: Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h  ShaderUniformLayout.h  ShaderUniformType.h  UniformTrait.h
Vectrix/src/Vectrix/Rendering/Textures/: Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h
Vectrix/src/Vectrix/Scene/: Component.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h
Vectrix/src/Vectrix/Scene/Components/: MeshComponent.cpp  MeshComponent.h  TransformComponent.cpp  TransformComponent.h
Vectrix/src/Vectrix/Utils/: Data.h  Hashing.h  Json.cpp  Json.h  Math.h  Memory.h
Vectrix/src/dox/: changelog.dox  main.dox  modules.dox  modules_overview.dox  rendering_overview.dox  tools_overview.dox
VectrixEditor/src/: Editor.cpp
VectrixEditor/src/Layers/: EditorLayer.cpp  EditorLayer.h
docs/: AppInfo_8cpp_source.html  AppInfo_8h.html  AppInfo_8h_source.html  Application_8cpp_source.html  Application_8h.html  Application_8h_source.html  Buffer_8cpp_source.html  Buffer_8h.html  Buffer_8h_source.html  Core_8h_source.html  Data_8h_source.html  DeltaTime_8h.html  DeltaTime_8h_source.html  EntryPoint_8h_source.html  Event_8h_source.html  Framebuffer_8cpp_source.html  Framebuffer_8h_source.html  GraphicsContext_8cpp_source.html  GraphicsContext_8h_source.html  Hashing_8cpp_source.html  Hashing_8h_source.html  ImGuiBuild_8cpp_source.html  ImGuiLayer_8cpp_source.html  ImGuiLayer_8h.html  ImGuiLayer_8h_source.html  ImGuiManager_8cpp_source.html  ImGuiManager_8h_source.html  ImGuiWidget_8cpp_source.html  ImGuiWidget_8h.html  ImGuiWidget_8h_source.html  Input_8h_source.html  Json_8cpp_source.html  Json_8h.html  Json_8h_source.html  KeyCodes_8h_source.html  KeyEvent_8h_source.html  LayerStack_8cpp_source.html  LayerStack_8h_source.html  Layer_8cpp_source.html  Layer_8h_source.html  (+241 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_2.js  classes_5.js  classes_9.js  files_1.js  functions_1.js  functions_12.js  functions_2.js  functions_4.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  (+29 more)
run/: imgui.ini
run/shaders/: compile.bat  f.frag  f.frag.spv  v.vert  v.vert.spv  viewport.frag  viewport.vert
templates/: Doxyfile.in  README.in  version.h.in
(+24 files in other folders)
